
[package]
name = "squad_x"
version = "0.0.3"
description = "The purpose of this contract is to track the income and outcome of a given user. For this contract, we are going to  target the Solana blockchain. Thus, we define the data structure **Record** that will be transpile to a PDA Account  base on the seeds defined in the solana extension. In addition, the contract defines three methods, also known as  instruction; through this method, we add behavior."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "squad_x"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"